--- a/docs/latex/ImGuiInterface_8h_source.tex
+++ b/docs/latex/ImGuiInterface_8h_source.tex
@@ -12,7 +12,7 @@
 \DoxyCodeLine{00008\ \textcolor{preprocessor}{\#include\ <imgui\_impl\_opengl3.h>}}
 \DoxyCodeLine{00009\ \textcolor{preprocessor}{\#include\ <implot.h>}}
 \DoxyCodeLine{00010\ \textcolor{preprocessor}{\#include\ <implot\_internal.h>}}
-\DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ <imgui\_combo\_autoselect.h>}}
+\DoxyCodeLine{00011\ \textcolor{preprocessor}{\#include\ "{}../imguiComboAutoselect/imgui\_combo\_autoselect.h"{}}}
 \DoxyCodeLine{00012\ }
 \DoxyCodeLine{00013\ \textcolor{keyword}{class\ }\mbox{\hyperlink{classImGuiInterface}{ImGuiInterface}}\ \{}
 \DoxyCodeLine{00014\ \textcolor{keyword}{public}:}
