--- a/docs/latex/ICamera_8h_source.tex
+++ b/docs/latex/ICamera_8h_source.tex
@@ -4,44 +4,45 @@
 \begin{DoxyCode}{0}
 \DoxyCodeLine{00001\ \textcolor{preprocessor}{\#pragma\ once}}
 \DoxyCodeLine{00002\ }
-\DoxyCodeLine{00003\ \textcolor{preprocessor}{\#include\ <glm/glm.hpp>}}
-\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <glm/gtc/matrix\_transform.hpp>}}
-\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ <glm/gtx/rotate\_vector.hpp>}}
-\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <SDL2/SDL.h>}}
-\DoxyCodeLine{00007\ }
-\DoxyCodeLine{00008\ \textcolor{keyword}{class\ }\mbox{\hyperlink{classICamera}{ICamera}}\ \{}
-\DoxyCodeLine{00009\ \textcolor{keyword}{public}:}
-\DoxyCodeLine{00010\ \ \ \ \ \textcolor{keyword}{virtual}\ \mbox{\hyperlink{classICamera}{\string~ICamera}}()\ =\ \textcolor{keywordflow}{default};}
-\DoxyCodeLine{00011\ }
-\DoxyCodeLine{00012\ \ \ \ \ \textcolor{comment}{//\ Initializes\ the\ camera2D.worldLocation\ with\ the\ screen's\ width\ and\ height}}
-\DoxyCodeLine{00013\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ init()\ =\ 0;}
-\DoxyCodeLine{00014\ }
-\DoxyCodeLine{00015\ \ \ \ \ \textcolor{comment}{//\ Updates\ the\ camera2D.worldLocation's\ matrix\ if\ there\ have\ been\ any\ changes}}
-\DoxyCodeLine{00016\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ update()\ =\ 0;}
-\DoxyCodeLine{00017\ }
-\DoxyCodeLine{00018\ \ \ \ \ \textcolor{comment}{//\ Converts\ screen\ coordinates\ to\ world\ coordinates}}
-\DoxyCodeLine{00019\ \ \ \ \ \textcolor{keyword}{virtual}\ glm::vec2\ convertScreenToWorld(glm::vec2\ screenCoords)\ \textcolor{keyword}{const}\ =\ 0;}
-\DoxyCodeLine{00020\ }
-\DoxyCodeLine{00021\ \ \ \ \ \textcolor{comment}{//\ Returns\ the\ dimensions\ of\ the\ camera2D.worldLocation's\ view}}
-\DoxyCodeLine{00022\ \ \ \ \ \textcolor{keyword}{virtual}\ glm::ivec2\ getCameraDimensions()\ \textcolor{keyword}{const}\ =\ 0;}
-\DoxyCodeLine{00023\ }
-\DoxyCodeLine{00024\ \ \ \ \ \textcolor{comment}{//\ Returns\ the\ SDL\_Rect\ representing\ the\ camera2D.worldLocation's\ viewport}}
-\DoxyCodeLine{00025\ \ \ \ \ \textcolor{keyword}{virtual}\ SDL\_FRect\ getCameraRect()\ \textcolor{keyword}{const}\ =\ 0;}
-\DoxyCodeLine{00026\ }
-\DoxyCodeLine{00027\ \ \ \ \ \textcolor{comment}{//\ Additional\ methods\ to\ expose\ camera2D.worldLocation\ properties\ as\ needed}}
-\DoxyCodeLine{00028\ \ \ \ \ \textcolor{keyword}{virtual}\ glm::vec3\ getPosition()\ \textcolor{keyword}{const}\ =\ 0;}
-\DoxyCodeLine{00029\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setPosition(\textcolor{keyword}{const}\ glm::vec3\ newPosition)\ =\ 0;}
-\DoxyCodeLine{00030\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setPosition\_X(\textcolor{keyword}{const}\ \textcolor{keywordtype}{float}\ newPosition)\ =\ 0;}
-\DoxyCodeLine{00031\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setPosition\_Y(\textcolor{keyword}{const}\ \textcolor{keywordtype}{float}\ newPosition)\ =\ 0;}
-\DoxyCodeLine{00032\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setPosition\_Z(\textcolor{keyword}{const}\ \textcolor{keywordtype}{float}\ newPosition)\ =\ 0;}
-\DoxyCodeLine{00033\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{float}\ getScale()\ \textcolor{keyword}{const}\ =\ 0;}
-\DoxyCodeLine{00034\ \ \ \ \ \textcolor{keyword}{virtual}\ glm::mat4\ getCameraMatrix()\ \textcolor{keyword}{const}\ =\ 0;}
-\DoxyCodeLine{00035\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setScale(\textcolor{keywordtype}{float}\ scale)\ =\ 0;}
-\DoxyCodeLine{00036\ }
-\DoxyCodeLine{00037\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{bool}\ isPointInCameraView(\textcolor{keyword}{const}\ glm::vec4\ point,\ \textcolor{keywordtype}{float}\ margin)\ =\ 0;}
-\DoxyCodeLine{00038\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ makeCameraDirty()\ =\ 0;}
-\DoxyCodeLine{00039\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{bool}\ hasChanged()\ =\ 0;}
-\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ refreshCamera()\ =\ 0;}
-\DoxyCodeLine{00041\ \};}
+\DoxyCodeLine{00003\ \textcolor{preprocessor}{\#define\ GLM\_ENABLE\_EXPERIMENTAL}}
+\DoxyCodeLine{00004\ \textcolor{preprocessor}{\#include\ <glm/glm.hpp>}}
+\DoxyCodeLine{00005\ \textcolor{preprocessor}{\#include\ <glm/gtc/matrix\_transform.hpp>}}
+\DoxyCodeLine{00006\ \textcolor{preprocessor}{\#include\ <glm/gtx/rotate\_vector.hpp>}}
+\DoxyCodeLine{00007\ \textcolor{preprocessor}{\#include\ <SDL2/SDL.h>}}
+\DoxyCodeLine{00008\ }
+\DoxyCodeLine{00009\ \textcolor{keyword}{class\ }\mbox{\hyperlink{classICamera}{ICamera}}\ \{}
+\DoxyCodeLine{00010\ \textcolor{keyword}{public}:}
+\DoxyCodeLine{00011\ \ \ \ \ \textcolor{keyword}{virtual}\ \mbox{\hyperlink{classICamera}{\string~ICamera}}()\ =\ \textcolor{keywordflow}{default};}
+\DoxyCodeLine{00012\ }
+\DoxyCodeLine{00013\ \ \ \ \ \textcolor{comment}{//\ Initializes\ the\ camera2D.worldLocation\ with\ the\ screen's\ width\ and\ height}}
+\DoxyCodeLine{00014\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ init()\ =\ 0;}
+\DoxyCodeLine{00015\ }
+\DoxyCodeLine{00016\ \ \ \ \ \textcolor{comment}{//\ Updates\ the\ camera2D.worldLocation's\ matrix\ if\ there\ have\ been\ any\ changes}}
+\DoxyCodeLine{00017\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ update()\ =\ 0;}
+\DoxyCodeLine{00018\ }
+\DoxyCodeLine{00019\ \ \ \ \ \textcolor{comment}{//\ Converts\ screen\ coordinates\ to\ world\ coordinates}}
+\DoxyCodeLine{00020\ \ \ \ \ \textcolor{keyword}{virtual}\ glm::vec2\ convertScreenToWorld(glm::vec2\ screenCoords)\ \textcolor{keyword}{const}\ =\ 0;}
+\DoxyCodeLine{00021\ }
+\DoxyCodeLine{00022\ \ \ \ \ \textcolor{comment}{//\ Returns\ the\ dimensions\ of\ the\ camera2D.worldLocation's\ view}}
+\DoxyCodeLine{00023\ \ \ \ \ \textcolor{keyword}{virtual}\ glm::ivec2\ getCameraDimensions()\ \textcolor{keyword}{const}\ =\ 0;}
+\DoxyCodeLine{00024\ }
+\DoxyCodeLine{00025\ \ \ \ \ \textcolor{comment}{//\ Returns\ the\ SDL\_Rect\ representing\ the\ camera2D.worldLocation's\ viewport}}
+\DoxyCodeLine{00026\ \ \ \ \ \textcolor{keyword}{virtual}\ SDL\_FRect\ getCameraRect()\ \textcolor{keyword}{const}\ =\ 0;}
+\DoxyCodeLine{00027\ }
+\DoxyCodeLine{00028\ \ \ \ \ \textcolor{comment}{//\ Additional\ methods\ to\ expose\ camera2D.worldLocation\ properties\ as\ needed}}
+\DoxyCodeLine{00029\ \ \ \ \ \textcolor{keyword}{virtual}\ glm::vec3\ getPosition()\ \textcolor{keyword}{const}\ =\ 0;}
+\DoxyCodeLine{00030\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setPosition(\textcolor{keyword}{const}\ glm::vec3\ newPosition)\ =\ 0;}
+\DoxyCodeLine{00031\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setPosition\_X(\textcolor{keyword}{const}\ \textcolor{keywordtype}{float}\ newPosition)\ =\ 0;}
+\DoxyCodeLine{00032\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setPosition\_Y(\textcolor{keyword}{const}\ \textcolor{keywordtype}{float}\ newPosition)\ =\ 0;}
+\DoxyCodeLine{00033\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setPosition\_Z(\textcolor{keyword}{const}\ \textcolor{keywordtype}{float}\ newPosition)\ =\ 0;}
+\DoxyCodeLine{00034\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{float}\ getScale()\ \textcolor{keyword}{const}\ =\ 0;}
+\DoxyCodeLine{00035\ \ \ \ \ \textcolor{keyword}{virtual}\ glm::mat4\ getCameraMatrix()\ \textcolor{keyword}{const}\ =\ 0;}
+\DoxyCodeLine{00036\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ setScale(\textcolor{keywordtype}{float}\ scale)\ =\ 0;}
+\DoxyCodeLine{00037\ }
+\DoxyCodeLine{00038\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{bool}\ isPointInCameraView(\textcolor{keyword}{const}\ glm::vec4\ point,\ \textcolor{keywordtype}{float}\ margin)\ =\ 0;}
+\DoxyCodeLine{00039\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ makeCameraDirty()\ =\ 0;}
+\DoxyCodeLine{00040\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{bool}\ hasChanged()\ =\ 0;}
+\DoxyCodeLine{00041\ \ \ \ \ \textcolor{keyword}{virtual}\ \textcolor{keywordtype}{void}\ refreshCamera()\ =\ 0;}
+\DoxyCodeLine{00042\ \};}
 
 \end{DoxyCode}
